add default values

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,7 +28,9 @@ jobs:
 
       - run: " > .env"
       - run: |
-         "THING=3"
+          DISCORD_BOT_ID=960764870490476554
+          POTD_ROLE_ID=976351806974201866
+          POTD_CHANNEL_ID=976351498806099971
 
       - run: echo "DISCORD_BOT_TOKEN=${{ secrets.DISCORD_BOT_TOKEN }}" >> .env
 
