--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,7 @@ jobs:
           go-version: '^1.13.8'
 
       - name: Creat go.mod file
-        run: go mod init
+        run: go mod init ./stav
 
       - name: Check if build works
         run: go build ./stav/main.go
