--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,8 +15,10 @@ jobs:
       - name: Create go.mod file
         run: go mod init github.com/stem-discord/potd-bot/stav
 
-      - name: Get all pkgs
-        run: go get github.com/bwmarrin/discordgo
+      - name: Get discord
+        run: go get github.com/bwmarrin/discordgo 
+      
+      - name: Get cron.v2  
         run: go get gopkg.in/robfig/cron.v2
 
       - name: Check if build works
