--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,7 +37,7 @@ jobs:
 
       - run: " > .env"
       - run: |
-          "DISCORD_BOT_ID=960764870490476554
+          echo "DISCORD_BOT_ID=960764870490476554
           POTD_ROLE_ID=976351806974201866
           POTD_CHANNEL_ID=976351498806099971" >> .env
 
