--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
+# Ignore single length dev files
+?.*
+
+# Ignore IDE files
+.vscode
+.idea
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
